<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TableRow style="@style/MatchParentWeight1Style">

            <Button
                android:id="@+id/buttonSin"
                style="@style/FunButton"
                android:text="@string/sin" />

            <Button
                android:id="@+id/buttonCos"
                style="@style/FunButton"
                android:text="@string/cos" />

            <Button
                android:id="@+id/buttonTan"
                style="@style/FunButton"
                android:text="@string/tan" />

        </TableRow>


        <TableRow style="@style/MatchParentWeight1Style">

            <Button
                android:id="@+id/buttonPi"
                style="@style/FunButton"
                android:text="@string/pi" />

            <Button
                android:id="@+id/buttonE"
                style="@style/FunButton"
                android:text="@string/e" />

            <Button
                android:id="@+id/buttonFactorial"
                style="@style/FunButton"
                android:text="@string/factorial" />

        </TableRow>

        <TableRow style="@style/MatchParentWeight1Style">

            <Button
                android:id="@+id/buttonLog"
                style="@style/FunButton"
                android:text="@string/log" />

            <Button
                android:id="@+id/buttonLn"
                style="@style/FunButton"
                android:text="@string/ln" />

            <Button
                android:id="@+id/buttonMod"
                style="@style/FunButton"
                android:text="@string/mod" />

        </TableRow>

        <TableRow style="@style/MatchParentWeight1Style">

            <Button
                android:id="@+id/buttonPower"
                style="@style/FunButton"
                android:text="@string/power" />

            <Button
                android:id="@+id/buttonSquare"
                style="@style/FunButton"
                android:text="@string/x_2" />

            <Button
                android:id="@+id/buttonSqrt"
                style="@style/FunButton"
                android:text="@string/sqrt" />

        </TableRow>

    </TableLayout>

</FrameLayout>