<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="6"
            android:textAlignment="viewEnd"
            android:background="@color/black"
            android:textColor="@color/white"
            android:textSize="65sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="6"
            android:textAlignment="viewEnd"
            android:background="@color/black"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/black">


            <TableRow style="@style/MatchParentWeight1Style">

                <Button
                    android:id="@+id/buttonClear"
                    style="@style/FunButton"
                    android:textColor="@color/darkOrange"
                    android:text="@string/c" />

                <Button
                    android:id="@+id/buttonLeftBracket"
                    style="@style/FunButton"
                    android:text="@string/leftBracket" />

                <Button
                    android:id="@+id/buttonRightBracket"
                    style="@style/FunButton"
                    android:text="@string/rightBracket" />


                <Button
                    android:id="@+id/buttonBackspace"
                    style="@style/FunButton"
                    android:text="@string/backspace" />
            </TableRow>

            <TableRow style="@style/MatchParentWeight1Style">

                <Space style="@style/NumButton"/>

                <Space style="@style/NumButton"/>

                <Button
                    android:id="@+id/buttonPercent"
                    style="@style/FunButton"
                    android:text="@string/percent" />

                <Button
                    android:id="@+id/buttonDivide"
                    style="@style/FunButton"
                    android:text="@string/divide" />
            </TableRow>

            <TableRow style="@style/MatchParentWeight1Style">

                <Button
                    android:id="@+id/button7"
                    style="@style/NumButton"
                    android:text="@string/_7" />

                <Button
                    android:id="@+id/button8"
                    style="@style/NumButton"
                    android:text="@string/_8" />

                <Button
                    android:id="@+id/button9"
                    style="@style/NumButton"
                    android:text="@string/_9" />

                <Button
                    android:id="@+id/buttonMultiply"
                    style="@style/FunButton"
                    android:text="@string/multiply" />
            </TableRow>

            <TableRow style="@style/MatchParentWeight1Style">

                <Button
                    android:id="@+id/button4"
                    style="@style/NumButton"
                    android:text="@string/_4" />

                <Button
                    android:id="@+id/button5"
                    style="@style/NumButton"
                    android:text="@string/_5" />

                <Button
                    android:id="@+id/button6"
                    style="@style/NumButton"
                    android:text="@string/_6" />

                <Button
                    android:id="@+id/buttonMinus"
                    style="@style/FunButton"
                    android:text="@string/minus" />
            </TableRow>

            <TableRow style="@style/MatchParentWeight1Style">

                <Button
                    android:id="@+id/button1"
                    style="@style/NumButton"
                    android:text="@string/_1" />

                <Button
                    android:id="@+id/button2"
                    style="@style/NumButton"
                    android:text="@string/_2" />

                <Button
                    android:id="@+id/button3"
                    style="@style/NumButton"
                    android:text="@string/_3" />

                <Button
                    android:id="@+id/buttonPlus"
                    style="@style/FunButton"
                    android:text="@string/plus" />
            </TableRow>

            <TableRow style="@style/MatchParentWeight1Style">

                <Button
                    android:id="@+id/buttonSign"
                    style="@style/FunButton"
                    android:text="@string/sign" />

                <Button
                    android:id="@+id/button0"
                    style="@style/NumButton"
                    android:text="@string/_0" />

                <Button
                    android:id="@+id/buttonComma"
                    style="@style/NumButton"
                    android:text="@string/comma" />

                <Button
                    android:id="@+id/buttonEqual"
                    style="@style/FunButton"
                    android:background="@drawable/btn_rounded_green"
                    android:textColor="@color/white"
                    android:text="@string/equal" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

